add REVIEW comments based on a quick scan of each class file in fractionmatcher package
# 0.00.96 (65450) Jun 26, 2012
Equality lab tab: Made the number line show tickmarks differently on left and right side
# 0.00.95 (65443) Jun 26, 2012
Build a Fraction: When ejecting a box from the scoring cell, move it back to toolboxes
Build a Fraction: Up/down spinner buttons should fade out when going to target box.
Build a Fraction: Improved level navigation and wired up smilie face buttons
Build a Fraction: Numbers: Added "reset" button for each scene
Build a Fraction: Pictures: Added "reset" button for each scene
Build a Fraction: Pictures: Pieces should go back to the toolbox if split from a container
Build a Fraction: added ContainerFrontNode to hide seams and show the container divisions lines more clearly
Build a Fraction: added level title to picture and number scenes
Build a Fraction: Added new level selection screen
Build a Fraction: Pictures: Removed border for dragged pieces
# 0.00.94 (65403) Jun 22, 2012
# 0.00.93 (65401) Jun 22, 2012
Build a Fraction: Animate out containers when the play area has none
Build a Fraction: Started new UI with a tool box for multiple piece sizes and a single container in the center that can be broken into different numbers of subdivisions
Build a Fraction: Added standalone app for build a fraction
Fraction Matcher: Expanded ninja star a little bit
Fraction Matcher: Added ninja star for level 8 and as a new representation
Fraction Matcher: Added ring of hexagons for level 7 and as a new representation
# 0.00.92 (65358) Jun 21, 2012
Build a Fraction: Pictures: Fixed: Bug: multiple pieces went into the same target box.
Build a Fraction: Pictures: Fixed: Split button should change cursor back to arrow after clicking.
Build a Fraction: Pictures: Fixed: Container shouldn't be draggable once in scoring cell.
# 0.00.91 (65322) Jun 19, 2012
Build a Fraction: Pictures: Containers animate back to the toolbox